appId: "host.exp.Exponent"
---
- launchApp
- tapOn: "rn-expo-base"
- assertVisible: "Home"
- tapOn: "Show Details"
- extendedWaitUntil:
    visible: "Showing details for user Dan"
    timeout: 10000